--- a/Datatypes.html
+++ b/Datatypes.html
@@ -116,7 +116,7 @@
 
 //date
      let currentDate=new Date()
-     console.log('data value is',currentDate,'type of fate is',typeof(currentDate))
+     console.log('data value is',currentDate,'type of date is',typeof(currentDate))
 
      const str1='Hello'
      str1[0]='h'
