--- a/Loop _controlflow.html
+++ b/Loop _controlflow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="= "en">
+<html lang="= "en>
 <head>
     <meta charset="UTF-8">
     <meta name=" viewport" content= "width=device-width, initial scale=1.0">
@@ -64,7 +64,7 @@
     }
     for(let y=0;y<=30;y+=5){
         console.log('Skiping 5',y)
-    }
+    }                         
 //Multiplication table with for loop
     let number=5; 
     for(let s=1;s<=10;s++){
