--- a/StringMethod.html
+++ b/StringMethod.html
@@ -36,7 +36,7 @@
     console.log("Extacting Hello",str_substring.substring(0,5))
     console.log("Extracting rld",str_substring.substring(8,11))
 
-//Indexof:The indexof methods  searches for a substring and returns the index of the first occurence.
+//Indexof:The indexof methods  searc9hes for a substring and returns the index of the first occurence.
     let str_index="Hello World"
     console.log("Searching o:",str_index.indexOf('o'))
     console.log("Searching r:",str_index.indexOf('r'))
