--- a/condition_decision.html
+++ b/condition_decision.html
@@ -155,7 +155,7 @@
      }
      console.log(season)
 
-// // grade checking
+     // grade checking
     if(score>=90){
         grade='A+'
         console.log('your grade is',grade)
