--- a/LogicPraticePrograme2.html
+++ b/LogicPraticePrograme2.html
@@ -45,7 +45,7 @@ console.log(sortArray(['z','f','x','g','a']))
         console.log(string_blank('testing','hello'))
 
 
-    let numbers=[,2,3,4,5,6,7,8]
+    let numbers=[1,2,3,4,5,6,7,8]
     let result=numbers.filter(num=>num%2!=0) 
                 .map(square=>square*2)
     console.log(result)
