--- a/OOPS1.html
+++ b/OOPS1.html
@@ -16,7 +16,7 @@ javascript is a versatile language that supports OOP principles through its prot
  <p id="demo"></p>
 <p>2.Object: obj in JS are cpmplex data types that can store data have asspciated behaviour through properties nd methods.</p>
 <P> 3. Inheritance: is a mechanism that allows a class (subclass/derived class)to inherit properitites and methods 
-from another class(superclass/base class).Its promotes code reuse and establishes an "is-a" lationship between classes.</P>
+from another class(superclass/base class).Its promotes code reuse and establishes an "is-a" relationship between classes.</P>
 <p> 4. Polyorphism: it allows objects of different classes to be trated as object of common base class.</p>
 </body>
 <script>
